to do and bar graph

--- a/view/barChart.html
+++ b/view/barChart.html
@@ -6,42 +6,38 @@ window.onload = function () {
 	
 var chart = new CanvasJS.Chart("chartContainer", {
 	animationEnabled: true,
+	 zoomEnabled:true,
 	
 	title:{
-		text:"Fortune 500 Companies by Country"
+		text:"No Of States Y By Countries",
+		 fontColor: "orange",
 	},
 	axisX:{
 		interval: 1
 	},
 	axisY2:{
-		interlacedColor: "rgba(1,77,101,.2)",
-		gridColor: "rgba(1,77,101,.1)",
-		title: "Number of Companies"
+		interlacedColor: "black",
+		gridColor: "orange",
+		title: "Number of States",
+		 titleFontColor: "red"
+
+
 	},
 	data: [{
 		type: "bar",
-		name: "companies",
+		name: "States",
 		axisYType: "secondary",
-		color: "#014D65",
+		color: "pink",
 		dataPoints: [
-			{ y: 3, label: "Sweden" },
-			{ y: 7, label: "Taiwan" },
-			{ y: 5, label: "Russia" },
-			{ y: 9, label: "Spain" },
-			{ y: 7, label: "Brazil" },
-			{ y: 7, label: "India" },
-			{ y: 9, label: "Italy" },
-			{ y: 8, label: "Australia" },
-			{ y: 11, label: "Canada" },
-			{ y: 15, label: "South Korea" },
-			{ y: 12, label: "Netherlands" },
-			{ y: 15, label: "Switzerland" },
-			{ y: 25, label: "Britain" },
-			{ y: 28, label: "Germany" },
-			{ y: 29, label: "France" },
-			{ y: 52, label: "Japan" },
-			{ y: 103, label: "China" },
-			{ y: 134, label: "US" }
+			{ y: 10, label: "Sweden", color:"orange" },
+			{ y: 20, label: "Taiwan" , color:"white" },
+			{ y: 12, label: "Russia" , color:"grey" },
+			{ y: 30, label: "Spain"  , color:"sky"},
+			{ y: 17, label: "Brazil" , color:"pink" },
+			{ y: 31, label: "India"  , color:"blue"},
+			{ y: 35, label: "Italy" , color:"yellow"},
+			{ y: 40, label: "Australia" , color:"red" },
+			
 		]
 	}]
 });
