there are so many importantt file addded

--- a/view/disabled.html
+++ b/view/disabled.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Enable or Disable Checkbox on DropDown Selection - JavaScript</title>
+    <title>DropDown Disable</title>
     <style>
         body, select {
             font:14px Verdana;
